samples/_failures_safe/1761226121_38d8ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3aef286.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_c3aef286.c:185:5: error: expected declaration or statement at end of input
  185 |     if (!graph) return;
      |     ^~
